styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.font-poppins {
  font-family: "Poppins", sans-serif;
  font-weight: 100;
  font-style: normal;
}

/* Shared Styles */
.max-width {
    max-width: 90%;
    margin: 0 auto;
}
.display-flex {
    display: flex;
    justify-content: space-between;
    gap:1.9rem;
    align-items: center;
}
.btn-primary{
    background-color: #E02C6D;
    color: #ffffff;
    padding: 0.5rem 1rem;
    border-radius: 50px;
    border: none;
    cursor: pointer;
}

.margin-top{
    margin-top: 100px;
}

/* font-color */
.primary-color{
    color: #3A3A3A;
}
.secondary-color{
    color: #6C6C6C;
}

/* naveber section */
.nav-title{
    font-size: 1.5rem;
    font-weight: 700;
}
.nav-links ul{
    list-style: none;
}
.nav-links ul a{
    font-size: 1rem;
    font-weight: 600;
    color: #3A3A3A;
    text-decoration: none;
}

/* Hero Section */

.hero-container{
    margin-top: 40px;
    gap: 133px;
}
.hero-content h1{
    font-size: 3.25rem;
    font-weight: 700;
}
.hero-content p{
    font-size: 1rem;
    font-weight: 500;
    width: 505px;
}
.hero-container button{
    display:block;
    margin:30px 0px;
}

.hero-image{
    margin-left: 45px;
    margin-right: 33px;
}
.hero-image{
    background-image: url("../images/Circle design.svg");
    background-repeat:no-repeat;
    background-position:center;
    background-size:contain;
}

/* Sponsor Images */

.sponsor-content .images-content {
    margin: 0 45px;
    display: grid;
    grid-template-columns: repeat(7, 1fr);
}

/* Card Sections */
.popular-collection{
    margin:0 auto;
}
.popular-head{
    text-align: center;
}
.collection-card{
    width: 100%;
    max-width: 950px;
    margin: 0 auto;
    border-radius: 12px;
    box-shadow: 1px 10px 50px 2px #ffffff;
    display: grid;
    grid-template-columns:repeat(3, 1fr);
}
/* Future Products Section */
.future-detail{
    width: 70%;
    margin-left: 50px;
}
.card-info img{
    width:100%;
}
.future-detail h2{
    font-size: 2.5rem;
    font-weight: 700;
}
.future-detail p{
    width: 501px;
    font-size: 1rem;
    font-weight: 500;
    line-height: 1.8rem;
}
.future-detail button{
    margin-top: 16px;
    padding:8px 16px;
    background-color: #E02C6D;
    color: #ffffff;
    border:none;
}
/* footer sction styles */
footer{
    background-color: #0e005c;
    color: #ffffff;
    text-align: center;
    padding: 20px 0;
}
footer h3{
    font-size: 2.5rem;
    font-weight: 700;
    color:#ffffff;
}
footer p{
    font-size: 1rem;
    font-weight: 500;
    color:#D9DBE1;
    line-height: 1.8rem;
}
.footer-social-icons{
    display:flex;
    justify-content:center;
    gap:20px;
    margin-top:20px;
}

.footer-social-icons a{
    color:white;
}

/* small-devices-responsive */
@media screen and (max-width:576px) {
    .nav-links ul{
    flex-direction: column;
    gap: 15px;
    align-items: center;
}
    .hero-container{
        flex-direction:column-reverse;
        max-width: 90%;
    }
    .hero-container h1{
        margin: 0 auto;
        font-size: 1.3rem;
        text-align: center;
    }
    .hero-container p{
        font-size: 0.8rem;
        width: 100%;
        margin: 20px 0;
    }
    .hero-container button{
        margin: 0 22%;
        display: block;
    }
    .hero-image{
    margin:0;
    text-align:center;
}
    .hero-image img{
        width: 100%;
        background-repeat: no-repeat;
        background-position: center;
        background-size: contain;
    }
.images-content{
        grid-template-columns: repeat(1, 1fr);
        grid-template-rows: repeat(1, 1fr);
        gap: 10px;
    }
    .images-content img{
    width:70%;
    margin:auto;
}
    .collection-card{
        grid-template-columns:repeat(1, 1fr);
    }
    .future-prodducts{
        flex-direction: column;
        gap: 20px;
    }
    .future-prodducts .images img{
        width: 100%;
    }
    .future-detail{
        width: 100%;
        margin-left: 0;
    }
    .future-detail h2{
        font-size: 1.5rem;
        text-align: center;
    }
    .future-detail p{
        width: 100%;
        margin-top: 15px;
        font-size: 0.8rem;
        text-align: center;
    }
    .future-detail button{
        margin: 0 auto;
        margin-top: 30px;
        display: block;
    }
    footer h3{
        font-size: 1.5rem;
    }
    footer p{
        font-size: 0.7rem;
        line-height: 1rem;
    }
}

